--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "format": "npx prettier --write resources/",
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.25",
+        "prettier": "^2.8.8",
+        "prettier-plugin-blade": "^1.6.9",
+        "prettier-plugin-tailwindcss": "^0.3.0",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
     }
 }
